--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/mistral": "^1.1.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
@@ -30,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "lucide": "^0.473.0",
     "lucide-react": "^0.473.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
