--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@ai-sdk/mistral": "^1.1.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
