--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,10 @@
 flask==3.0.0
 flask-cors==4.0.0
+httpx==0.27.2
 pydantic
 python-dotenv==1.0.0
-requests==2.31.0
-beautifulsoup4==4.12.2
+requests>=2.32.3
+beautifulsoup4>=4.12.3
 pandas
 numpy==1.26.3
 dnspython==2.4.2
